<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".content.register.RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/register_title"
        android:textSize="45sp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_username"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:drawableStart="@drawable/user_name_icon"
            android:drawablePadding="5dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/EnterUsername"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:textColor="@color/text_color_first"
            android:textColorHint="@color/text_color_first" />

        <EditText
            android:id="@+id/edit_text_password"
            android:autofillHints=""
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/EnterPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:textColor="@color/text_color_first"
            android:textColorHint="@color/text_color_first" />

        <EditText
            android:id="@+id/edit_text_phone_number"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone_number_icon"
            android:drawablePadding="5dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/EnterPassword"
            android:inputType="phone"
            android:padding="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:textColor="@color/text_color_first"
            android:textColorHint="@color/text_color_first" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/seller_option_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/switch_title"/>

        <TextView
            android:id="@+id/text_view_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/have_account"
            android:textColor="@color/text_link_color"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:text="@string/register_title"
            android:textSize="15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:drawableStartCompat="@drawable/error_icon" />

</RelativeLayout>